# proton

./: .dockerignore  .env.example  .gitignore  .gitmodules  .gitpod.yml  .space.kts  Cargo.toml  Dockerfile  Proton.toml  README.md  SECURITY.md  Trunk.toml  build.rs  default.nix  docker-compose.yml  flake.nix  index.md  package-lock.json  package.json  tauri.conf.json
.artifacts/archive/frontend/: .dockerignore  Cargo.toml  Dockerfile  build.rs  index.html
.artifacts/archive/frontend/src/: lib.rs
.artifacts/archive/frontend/static/: app.css
.artifacts/template/backend/: Cargo.toml
app/: .dockerignore  .env.example  Cargo.toml  Dioxus.toml  Dockerfile  Trunk.toml  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json
app/backend/: Backend.toml  Cargo.toml  Dockerfile
app/backend/src/: lib.rs  main.rs
app/backend/src/components/: mod.rs
app/backend/src/core/: application.rs  mod.rs  settings.rs
app/desktop/: Cargo.toml  tauri.conf.json
app/frontend/: Dockerfile  Trunk.toml  index.html  package.json  svelte.config.js  vite.config.js
app/frontend/scripts/: run.sh
app/frontend/src/: app.html  hooks.server.js  service-worker.js
app/frontend/src/core/: interface.rs  primitives.rs  requests.rs
app/frontend/src/data/: mod.rs
app/frontend/src/lib/: api.js  constants.js  styles.css
app/frontend/src/routes/: +layout.server.js  +layout.svelte  +page.js  +page.server.js  +page.svelte
app/frontend/static/: +page.svelte
app/public/: index.html
app/public/static/: sample.html
app/public/static/css/: app.css
app/restful/src/: lib.rs
app/restful/src/core/: primitives.rs
app/src/: lib.rs  main.rs  primitives.rs  scope.rs  utils.rs
app/src/actors/: mod.rs
app/src/cmp/: footer.rs  hero.rs  mod.rs  sidebar.rs
app/src/cmp/btn/: clickable.rs  linked.rs  mod.rs
app/src/cmp/icons/: arrows.rs  mod.rs  stacks.rs
app/src/cmp/layouts/: dash.rs  mod.rs
app/src/cmp/nav/: mod.rs  navbar.rs
app/src/core/: mod.rs
app/src/core/maps/: mod.rs
app/src/lib/: constants.js
app/src/lib/banners/: index.js
app/src/lib/forms/: Form.svelte
app/src/lib/nav/: index.js
app/src/lib/tables/: index.js
app/src/routes/: +layout.svelte  +page.svelte  dash.rs  index.rs  map.rs  mod.rs  settings.rs
app/src/routes/(auth)/: +layout.svelte
app/src/routes/auth/: login.rs  mod.rs  register.rs
app/static/: sample.html
app/static/css/: app.css  tailwind.css  tailwind.min.css
app/tests/: default.rs
app/wasm/: Cargo.toml  package.json
app/wasm/app/: index.html  package.json
app/wasm/app/src/: lib.rs
app/wasm/src/services/: requests.rs
app/worker/: .dockerignore  Cargo.toml  Dockerfile  README.md  wrangler.toml
app/worker/src/: lib.rs
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md
backend/app/: Cargo.toml
backend/app/src/: lib.rs  main.rs
backend/app/src/actors/: mod.rs
backend/app/src/app/: application.rs
backend/app/src/core/: context.rs  mod.rs  settings.rs  state.rs
backend/src/: lib.rs  settings.rs  states.rs
backend/src/api/: client.rs  mod.rs
backend/src/cli/: commands.rs
backend/src/core/: mod.rs
backend/src/core/errors/: error.rs
backend/src/data/models/: items.rs  tokens.rs  users.rs
client/wasm/: Cargo.toml
client/wasm/src/: lib.rs
client/wasm/tests/: default.rs
code/crates/proton-core/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  primitives.rs
crates/core/src/auth/: mod.rs  oauth2.rs
crates/core/src/errors/: mod.rs
crates/core/src/utils/: mod.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  runtime.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
crates/wallets/: Cargo.toml
crates/wallets/src/: keys.rs  lib.rs  mnemonic.rs  passphrase.rs  utils.rs  wallet.rs
crates/wallets/src/authorize/: authenticator.rs  interface.rs  mod.rs
crates/wallets/src/bip0039/: lang.rs  mod.rs  wordlist.rs
crates/wallets/src/wallets/: mod.rs
crates/wallets/tests/: default.rs
desktop/: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  tauri.conf.json
desktop/app/: Cargo.toml
desktop/plugins/hypervisor/: Cargo.toml
desktop/plugins/hypervisor/src/: lib.rs
desktop/src/: lib.rs  main.rs
frontend/app/: Cargo.toml  Trunk.toml  build.rs  index.html  package.json
frontend/app/public/: index.html
frontend/app/src/: lib.rs  main.rs
frontend/app/src/actors/: mod.rs
frontend/app/src/components/: mod.rs
frontend/app/src/core/: interface.rs  mod.rs  primitives.rs
frontend/app/src/data/: mod.rs
frontend/app/static/: app.css
proton/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Proton.toml  Trunk.toml  build.rs  index.html  package.json  pubspec.yaml
proton/android/app/: build.gradle
proton/ios/Runner.xcodeproj/: project.pbxproj
proton/lib/: app.dart  main.dart  proton.dart
proton/lib/src/: core.dart  data.dart  pages.dart  widgets.dart
proton/lib/src/core/: utils.dart
proton/lib/src/pages/: home.dart
proton/linux/: CMakeLists.txt
proton/macos/Runner.xcodeproj/: project.pbxproj
proton/src/: context.rs  lib.rs  main.rs  proxy.rs  settings.rs  states.rs  utils.rs
proton/src/actors/: mod.rs
proton/src/actors/api/: github.rs  mod.rs
proton/src/actors/editor/: mod.rs
proton/src/actors/files/: interface.rs  mod.rs
proton/src/actors/ops/: mod.rs  multiply.rs
proton/src/actors/tags/: mod.rs  tag.rs
proton/src/api/: mod.rs  server.rs
proton/src/api/middleware/: gateways.rs  mod.rs  portals.rs
proton/src/api/routes/: index.rs  (+2 more)
proton/src/cli/: commands.rs  mod.rs
proton/src/components/: mod.rs
proton/src/core/: application.rs  mod.rs  requests.rs
proton/src/data/: mod.rs
proton/src/platform/: mod.rs
proton/src/rt/: mod.rs  runtime.rs
proton/static/: app.css
proton/tests/: default.rs
proton/web/: index.html
proton/windows/: CMakeLists.txt
xtask/: Cargo.toml  proton.builder.yml  xtask.yml
xtask/src/: lib.rs  main.rs  primitives.rs  utils.rs  wasm.rs  workspace.rs
xtask/src/cli/: commands.rs  mod.rs
(+298 files in other folders)
