[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = []
description = "Proton "
edition = "2021"
homepage = "https://scattered-systems.github.io/proton/"
keywords = []
license = "MIT"
name = "proton-sdk"
readme = "README.md"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[[bin]]
bench = false
name = "proton"

[features]
default = []
full = ["default"]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
bson = { features = ["chrono-0_4", "serde_with"], version = "2.3.0" }
chrono = "0.4.19"
config = "0.13.1"
druid = { features = ["image-all", "webp"], version = "0.7.0" }
scsys = { features = ["full"], version = ">=0.1.4" }
serde = { features = ["derive"], version = "1.0.139" }
serde_json = "1.0.82"

[dev-dependencies]
