[workspace]
default-members = [
    "crates/proton"
]
exclude = [
    "xtask"
]
members = [
    "bin/api",
    "crates/*"
]

[workspace.package]
authors = [
    "FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", 
    "Scattered Systems (https://github.com/scattered-systems)"
]
categories = []
description = "proton"
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/wiki"
keywords = []
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[workspace.dependencies]
# scsys = { features = [], git = "https://github.com/scattered-systems/scsys", branch = "v0.2.0", version = "0.2.0" }
anyhow = "1"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default = "0.7"
strum = { features = ["derive"], version = "0.24" }

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
panic = "unwind"
rpath = false
opt-level = "z"
overflow-checks = false

