[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
categories = ["application", "cross-platform", "gtk4"]
description = "Powering the next-generation of internet based experiences"
edition = "2021"
keywords = ["application", "blockchain", "cross-platform", "datakit"]
license = "MIT"
name = "proton"
repository = "https://github.com/scattered-systems/proton.git"
version = "0.1.0"

[[bin]]
bench = false
name = "proton"
path = "src/main.rs"
test = false

[dependencies]
chrono = "0.4.19"
config = "0.13.1"
disaronno = "0.1.4"
druid = "0.7.0"
glob = "0.3.0"