[package]
authors = [
    "FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", 
    "Scattered Systems (https://github.com/scattered-systems)"
]
categories = []
default-run = "app"
description = "proton"
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/wiki"
keywords = []
license = "Apache-2.0"
name = "proton-ui"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[[bin]]
bench = false
name = "app"
path = "src/bin/app.rs"
test = false

[features]
default = [
    "web"
]

desktop = [
    "dioxus-desktop/default"
]
ssr = [

]
web = [
    "dioxus-router/web",
    "dioxus-web",
    "wasm"
]


wasm = [
    
]
wasm-ext = []

[lib]
bench = true
crate-type = [ "cdylib", "rlib" ]
doctest = true
test = true

[build-dependencies]

[dependencies]
anyhow = "1"
base64 = "0.21"
bytes = "1.4"
dioxus = { features = ["macro"], version = "0.3" }
dioxus-router = { features = ["web"], version = "0.3" }
dioxus-desktop = { optional = true, version = "0.3" }
dioxus-web = { features = ["hydrate"], optional = true, version = "0.3" }
dotenv = "0.15"
futures = "0.3"
gloo = { features = [ "futures" ], version = "0.8" }
js-sys = { features = [], version = "0.3" }
log = "0.4"
oauth2 = "4.3"
reqwest = "0.11"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24" }
smart-default = "0.7"

# WebAssembly (emscripten)
wasm-bindgen = { features = [ "serde-serialize" ], version = "0.2" }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[dependencies.web-sys]
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Node",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ResponseInit",
    "Window"
]
version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
