[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com/FL03)"]
categories = []
description = "The application server securely connecting users to the mainnet"
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/-/wiki"
keywords = ["application", "restful"]
license = "MIT"
name = "proton-backend"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]

[dependencies]
axum = { features = ["headers", "http2", "ws"], version = "0.5.17" }
argon2 = "0.4.1"
bollard = "0.13.0"
ethers = "0.17.0"
futures = "0.3.24"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.20" }
log = "0.4.17"
redis = "0.22.1"
reqwest = { features = ["json"], version = "0.11.12" }
scsys = { features = ["full"], version = "0.1.21" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
sha2 = "0.10.6"
thiserror = "1.0.37"
tokio = { features = ["full"], version = "1.21.2" }
tower = "0.4.13"
tower-cookies = "0.7.0"
tower-http = { features = ["full"], version = "0.3.4" }
tracing = "0.1.35"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }

[dev-dependencies]

