[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", "Scattered-Systems <jo3mccain@scattered-systems.com> (https://github.com/scattered-systems)"]
build = "build.rs"
categories = []
description = "Proton is a personal computing platform powered by the scsys ecosystem"
edition = "2021"
keywords = ["scsys"]
license = "Apache-2.0"
name = "proton-desktop"
readme = "README.md"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[features]
default = [ "custom-protocol", "hypervisor" ]
custom-protocol = [ "tauri/custom-protocol" ]

hypervisor = ["proton-hypervisor/default"]

[build-dependencies]
tauri-build = { features = [], version = "1.2" }

[dev-dependencies]

[dependencies]
# proton-sdk = { features = ["full"], path = "../crates/sdk", version = "0.1.0" }
proton-hypervisor = { features = [], path = "../plugins/hypervisor", version = "0.1.0" }
tauri = {  features = ["api-all"], version = "1.2" }

[workspace]
members = [
    "plugins/*",
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
panic = "unwind"
rpath = false
opt-level = "z"
overflow-checks = false

