[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "proton"
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/wiki"
keywords = []
license = "Apache-2.0"
name = "proton"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[[bin]]
bench = true
name = "proton"
path = "src/main.rs"
test = false

[features]

eth = [
]

wasm = []

[build-dependencies]

[dependencies]
proton-sdk = { features = ["full"], path = "../crates/sdk", version = "0.1.0" }


[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
