[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
default-run = "proton"
description = "proton"
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/wiki"
keywords = []
license = "Apache-2.0"
name = "proton"
readme.workspace = true
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[[bin]]
bench = true
name = "proton"
path = "src/main.rs"
test = false

[features]
default = [
    "std"
]

eth = []

std = [
    "tokio/full"
]
wasi = [
    "tokio_wasi/full"
]
wasm = []

desktop = []
ssr = []
web = []

[build-dependencies]

[dependencies]
proton-sdk = { features = ["full"], path = "../crates/sdk", version = "0.1.0" }

anyhow = "1"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default = "0.7"
strum = { features = ["derive"], version = "0.24" }
tokio = { features = ["full"], optional = true, version = "1" }

tokio_wasi = { features = ["full"], optional = true, version = "1" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
