[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "proton"
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/wiki"
keywords = ["proton", "scsys", "utility", "xtask"]
license = "Apache-2.0"
name = "proton-xtask"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
clap = { features = ["derive"], version = "4.0.29" }
devx-cmd = "0.5.0"
devx-pre-commit = "0.5.0" 
duct = "0.13.6"
log = "0.4.17"
man = "0.3.0"
proton-sdk = { features = [], path = "../crates/sdk", version = "0.1.0" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
