[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "proton"
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/wiki"
keywords = ["proton", "scsys", "utility", "xtask"]
license = "Apache-2.0"
name = "proton-xtask"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[build-dependencies]

[dependencies]
anyhow = "1"
clap = { features = ["cargo", "derive", "env"], version = "4" }
devx-cmd = "0.5.0"
devx-pre-commit = "0.5.0" 
duct = "0.13.6"
man = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wild = "2.1.0"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
