[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = ["wasm"]
description = "Exemplary real world app built with Rust + Yew + WebAssembly."
edition = "2021"
license = "MIT"
name = "desktop"
repository = "https://gitlab.com/scsys/bin/proton"
version = "0.1.0"

[build-dependencies]
tauri-build = { features = [], version = "1.1.1" }

[dependencies]
serde = { features = ["derive"], version = "1.0.145" }
serde_json = "1.0.85"
tauri = { features = ["api-all"], version = "1.1.1" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
