[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = ["wasm"]
description = "Exemplary real world app built with Rust + Yew + WebAssembly."
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/-/wiki"
keywords = ["wasm"]
license = "MIT"
name = "proton-desktop"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[build-dependencies]
tauri-build = { features = [], version = "1.1.1" }

[dependencies]
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
tauri = { features = ["api-all"], version = "1.1.1" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
