[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = ["wasm"]
description = "Exemplary real world app built with Rust + Yew + WebAssembly."
edition = "2021"
license = "MIT"
name = "conduit-wasm"
repository = "https://gitlab.com/scsys/bin/proton"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
dotenv_codegen = "0.15.0"
gloo = "0.8.0"
lazy_static = "1.4.0"
log = "0.4.17"
parking_lot = "0.12.1"
pulldown-cmark = "0.9.2"
reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.145"
thiserror = "1.0.37"
yew = "0.19.3"
yew-router = "0.16.0"
yew-hooks = "0.1.56"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]

[dev-dependencies]
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.33"
gloo-utils = "0.1.5"
