[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com/FL03)"]
categories = []
description = "Maximus"
edition = "2021"
homepage = "https://gitlab.com/FL03/template-restful-rust/-/wikis/home"
keywords = ["application", "restful"]
license = "MIT"
name = "app"
readme = "https://gitlab.com/FL03/template-restful-rust#README"
repository = "https://gitlab.com/template-restful-rust"
version = "0.1.0"

[[bin]]
bench = false
name = "app"

[build-dependencies]

[dependencies]
anyhow = "1.0.65"
axum = { features = ["headers", "http2", "macros", "ws"], version = "0.5.16" }
argon2 = "0.4.1"
futures = "0.3.24"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.20" }
redis = "0.21.6"
reqwest = "0.11.12"
scsys = { features = ["full"], version = "0.1.19" }
sea-orm = { features = ["runtime-tokio-rustls", "sqlx-all"], version = "0.9.3" }
serde = { features = ["derive"], version = "1.0.145" }
serde_json = "1.0.85"
tokio = { features = ["full"], version = "1.21.1" }
tower = "0.4.13"
tower-cookies = "0.7.0"
tower-http = { features = ["full"], version = "0.3.4" }
tracing = "0.1.35"
tracing-subscriber = { features = ["env-filter"], version = "0.3.14" }

[dev-dependencies]

