[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "proton"
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/wiki"
keywords = ["wasm"]
license = "Apache-2.0"
name = "proton-wasm"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[features]
default = ["core"]
full = ["core", "extras"]

core = []
extras = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "proton"
path = "src/lib.rs"
test = true

[build-dependencies]
# substrate-wasm-builder = "5.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[dependencies]
cfg-if = "1"
console_error_panic_hook = { optional = true, version = "0.1.7" }
dotenv_codegen = "0.15.0"
futures = "0.3"
gloo = { features = ["futures"], version = "0.8.0"}
js-sys = "0.3"
lazy_static = "1.4"
log = "0.4"
lru = "0.10"
parking_lot = "0.12.1"
plotters = { features = [], version = "0.3.4" }
pulldown-cmark = "0.9.2"
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.89"
wasm-bindgen = { features = ["serde-serialize"], version = "0.2.83" }
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"

# [dependencies.proton-sdk]
# features = ["full"]
# path = "../crates/sdk"
# version = "0.1.0"

[dependencies.web-sys]
features = [
    "Window",
    "console"
]
 version = "0.3.60"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
