[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Puzzled"
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/wiki"
keywords = []
license = "Apache-2.0"
name = "proton-core"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
acme = { features = [], git = "https://github.com/FL03/acme", branch = "v0.2.5", version = "0.2.5" }
axum-core = "0.3.0"
reqwest = { features = ["json", "rustls-tls", "stream"], version = "0.11" }
scsys = { features = [], version = "0.1.40" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
