[package]
authors.workspace = true
categories.workspace = true
description = "Core modules for the Proton SDK"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "proton-core"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
# scsys.workspace = true
anyhow.workspace = true
reqwest = { features = ["json", "rustls-tls", "stream"], version = "0.11" }
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
