[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
description = "Proton is a personal computing platform powered by the scsys ecosystem"
edition = "2021"
keywords = ["wasm"]
license = "Apache-2.0"
name = "proton-runtime"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
axum = { features = [], version = "0.6.1" }
futures = "0.3.25"
scsys = { features = ["full"], version = "0.1.36" }
serde = { features = ["derive"], version = "1.0.149" }
serde_json = "1.0.89"
strum = { features = ["derive"], version = "0.24.1" }
tarpc = { features = [], version = "0.31.0" }
tokio = { features = ["macros"], version = "1.23.0" }
tower = "0.4.13"
tower-http = { features = [], version = "0.3.5" }
tracing = "0.1.37"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }
