[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
description = "Proton is a personal computing platform powered by the scsys ecosystem"
edition = "2021"
keywords = ["wasm"]
license = "Apache-2.0"
name = "proton-sdk"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[features]
default = ["core"]
full = ["core"]

core = ["proton-core/default"]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
proton-core = { features = [], optional = true, path = "../core", version = "0.1.0" }

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
