[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "proton-sdk"
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/wiki"
keywords = []
license = "Apache-2.0"
name = "proton-sdk"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[features]
default = [ "core", "services" ]
full = [ "core", "services" ]

services = ["wallets"]

core = ["proton-core/default"]
wallets = ["proton-wallets/default"]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
proton-core = { features = [], optional = true, path = "../core", version = "0.1.0" }
proton-wallets = { features = [], optional = true, path = "../wallets", version = "0.1.0" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
