[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Puzzled"
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/wiki"
keywords = []
license = "Apache-2.0"
name = "proton-wallets"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
glob = "0.3.0"
rand = { features = [], version = "0.8.5" }
reqwest = { features = [], version = "0.11" }
scsys = { features = [], version = "0.1.40" }
secp256k1 = { features = ["rand"], version = "0.25.0" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24" }
tokio = { features = ["macros"], version = "1" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
