[package]
authors.workspace = true
categories.workspace = true
description = "A custom blockchain wallet designed for complete integration with Proton"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "proton-wallets"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
anyhow.workspace = true
chrono = "0.4"
glob = "0.3"
rand = { features = [], version = "0.8" }
reqwest = { features = [], version = "0.11" }
secp256k1 = { features = ["rand"], version = "0.26" }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

[dev-dependencies]
tokio = { features = ["macros"], version = "1" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
