[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com/FL03)"]
build = "build.rs"
categories = []
description = "Curiosity is a wasm toolkit for building dynamic, cloud-native applications"
edition = "2021"
homepage = "https://github.com/scattered-systems/proton/-/wiki"
keywords = ["wasm"]
license = "MIT"
name = "proton"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0" # Update crate versioning

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[[bin]]
name = "proton"

[build-dependencies]
substrate-wasm-builder = "4.0.0"
yew = "0.19.3"

[dependencies]
console_error_panic_hook = { optional = true, version = "0.1.7" }
dotenv_codegen = "0.15.0"
futures = "0.3.25"
gloo = "0.8.0"
js-sys = "0.3.60"
lazy_static = "1.4.0"
log = "0.4.17"
lru = "0.8.1"
parking_lot = "0.12.1"
pulldown-cmark = "0.9.2"
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = "1.21.2"
tokio-stream = "0.1.11"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
wee_alloc = { optional = true, version = "0.4.5" }

yew = "0.19.3"
yew-hooks = "0.1.56"
yew-router = "0.16.0"

[dependencies.web-sys]
features = [
    "Client",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Headers",
    "Node",
    "Request", 
    "RequestInit", 
    "RequestMode", 
    "Response", 
    "Window",
    "console"
]
 version = "0.3.60"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]