[package]
name = "proton-api"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Austin Bonander <austin@launchbadge.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
futures = "0.3.24"
tokio = { features = ["macros", "rt-multi-thread"], version = "1.21.2" }
axum = { features = ["tower-log"], version = "0.5.16"  }
sqlx = { features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"], version = "0.6.2" }

# The `clap` beta gives us a much nicer way to define configuration parameters for our application.
clap = "4.0.10"

serde = { features = ["derive"], version = "1.0.145" }

# State of the art password hashing.
argon2 = "0.4.1"

# Axum builds on the types in Tower
tower = "0.4.13"
tower-http = { features = ["trace"], version = "0.3.4" }

jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"

time = "0.3.15"

uuid = { features = ["serde"], version = "1.1.2"  }

# Utility Crates
anyhow = "1.0.65"
async-trait = "0.1.57"
dotenv = "0.15.0"
env_logger = "0.9.1"
itertools = "0.10.5"
log = "0.4.17"
rand = "0.8.5"
thiserror = "1.0.37"