[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", "Scattered-Systems <jo3mccain@scattered-systems.com> (https://github.com/scattered-systems)"]
categories = []
description = "proton-hypervisor"
edition = "2021"
keywords = ["scsys"]
license = "Apache-2.0"
name = "proton-hypervisor"
readme = "README.md"
repository = "https://github.com/scattered-systems/proton"
version = "0.1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[build-dependencies]

[dev-dependencies]

[dependencies]
tauri = {  features = ["api-all"], version = "1.2" }